# Object libraries require CMAKE 2.8.8 version 
CMAKE_MINIMUM_REQUIRED (VERSION 2.8.8) 
MESSAGE(STATUS "CMAKE VERSION ${CMAKE_VERSION}")

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/../../cmake ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
# Find HCC compiler
FIND_PACKAGE(HC++ 1.0 REQUIRED)


IF(NOT DEFINED $ENV{ROCM_PROFILER_PATH})
  SET(ROCM_PROFILER_PATH "/opt/rocm/profiler/CXLActivityLogger")
ELSE()
  SET(ROCM_PROFILER_PATH $ENV{HIP_PATH})
ENDIF()
file(GLOB SRCS *.cpp)

IF(${PLATFORM} MATCHES "hcc")
  execute_process(COMMAND ${HCC_CONFIG} --install --cxxflags
                            OUTPUT_VARIABLE HCC_CXXFLAGS)
  execute_process(COMMAND ${HCC_CONFIG}  --install --ldflags
                            OUTPUT_VARIABLE HCC_LDFLAGS)

  SET(HIPBLAS_INCLUDE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../lib/include/")
  SET(HIPBLAS_LIBRARY_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../build/lib/src")

  string(STRIP "${HCC_CXXFLAGS}" HCC_CXXFLAGS)
  string(STRIP "${HCC_LDFLAGS}" HCC_LDFLAGS)
  set (HCC_CXXFLAGS "${HCC_CXXFLAGS} -I${HIPBLAS_INCLUDE_PATH}")
  set (HCC_LDFLAGS "${HCC_LDFLAGS} -L${HIPBLAS_LIBRARY_PATH} -Wl,-rpath-link,${HIP_PATH}/lib -Wl,-rpath-link,${ROCM_PROFILER_PATH}/bin/x86_64/ -L${ROCM_PROFILER_PATH}/bin/x86_64/ -L${HIP_PATH}/lib  -lCXLActivityLogger -lhip_hcc")
  INCLUDE_DIRECTORIES(${HIP_PATH}/include)

  SET_PROPERTY(SOURCE ${SRCS} APPEND_STRING PROPERTY COMPILE_FLAGS " ${HCC_CXXFLAGS} -DGTEST_HAS_TR1_TUPLE=0 -D__HIP_PLATFORM_HCC__")
  SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin/")
  ADD_EXECUTABLE(unit-hip-test ${SRCS})
  SET(LINK "-lhc_am -lblas")
  SET_PROPERTY(TARGET unit-hip-test APPEND_STRING PROPERTY LINK_FLAGS " ${HCC_LDFLAGS} ${LINK}")

  TARGET_LINK_LIBRARIES(unit-hip-test hipblas)

  add_test(NAME unit-hip-test COMMAND ./bin/unit-hip-test)

ELSEIF(${PLATFORM} MATCHES "nvcc")
 
  SET(HIPBLAS_INCLUDE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../lib/include/")
  SET(HIPBLAS_LIBRARY_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../build/lib/src")

  set (HIP_CXXFLAGS "${HIP_CXXFLAGS} -I${HIPBLAS_INCLUDE_PATH} -I/usr/local/cuda/include/ -I${HIP_PATH}/include")
  set (HIP_LDFLAGS "${HIP_LDFLAGS} -L${HIPBLAS_LIBRARY_PATH} -L/usr/local/cuda/lib64")
  INCLUDE_DIRECTORIES(${HIP_PATH}/include)

  SET_PROPERTY(SOURCE ${SRCS} APPEND_STRING PROPERTY COMPILE_FLAGS " ${HIP_CXXFLAGS} -DGTEST_HAS_TR1_TUPLE=0 -D__HIP_PLATFORM_NVCC__")
  SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin/")
  ADD_EXECUTABLE(unit-hip-test ${SRCS})
  SET(LINK "-pthread")
  SET_PROPERTY(TARGET unit-hip-test APPEND_STRING PROPERTY LINK_FLAGS " ${HIP_LDFLAGS} ${LINK}")

  TARGET_LINK_LIBRARIES(unit-hip-test hipblas blas cudart)

  add_test(NAME unit-hip-test COMMAND ./bin/unit-hip-test)  
ENDIF()
