# Object libraries require CMAKE 2.8.8 version 
CMAKE_MINIMUM_REQUIRED (VERSION 2.8.8) 
MESSAGE(STATUS "CMAKE VERSION ${CMAKE_VERSION}")

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/../../cmake ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
# Find HCC compiler
FIND_PACKAGE(HC++ 1.0 REQUIRED)

file(GLOB SRCS *.cpp)

execute_process(COMMAND ${HCC_CONFIG} --install --cxxflags
                            OUTPUT_VARIABLE HCC_CXXFLAGS)
execute_process(COMMAND ${HCC_CONFIG}  --install --ldflags
                            OUTPUT_VARIABLE HCC_LDFLAGS)

SET(HCBLAS_INCLUDE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../lib/")
SET(TEST_INCLUDE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../")
SET(HCBLAS_LIBRARY_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../build/lib/src")

string(STRIP "${HCC_CXXFLAGS}" HCC_CXXFLAGS "-amdgpu-target=gfx803 -amdgpu-target=gfx900")
string(STRIP "${HCC_LDFLAGS}" HCC_LDFLAGS "-amdgpu-target=gfx803 -amdgpu-target=gfx900")
set (HCC_CXXFLAGS "-I${TEST_INCLUDE_PATH} ${HCC_CXXFLAGS} -I${HCBLAS_INCLUDE_PATH}")
set (HCC_LDFLAGS "${HCC_LDFLAGS} -L${HCBLAS_LIBRARY_PATH} -Wl,-rpath,${HIP_PATH}/lib")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin/")
SET_PROPERTY(SOURCE ${SRCS} APPEND_STRING PROPERTY COMPILE_FLAGS " ${HCC_CXXFLAGS} -DGTEST_HAS_TR1_TUPLE=0 ")
ADD_EXECUTABLE(unittest ${SRCS})
SET_PROPERTY(TARGET unittest APPEND_STRING PROPERTY LINK_FLAGS " ${HCC_LDFLAGS} ")

TARGET_LINK_LIBRARIES(unittest hcblas hc_am blas)
add_test(NAME unittest COMMAND ./bin/unittest)
