ADD_SUBDIRECTORY(cgemm)
ADD_SUBDIRECTORY(dasum)
ADD_SUBDIRECTORY(dcopy)
ADD_SUBDIRECTORY(ddot)
ADD_SUBDIRECTORY(dscal)
ADD_SUBDIRECTORY(sasum)
ADD_SUBDIRECTORY(saxpy)
ADD_SUBDIRECTORY(scopy)
ADD_SUBDIRECTORY(sdot)
ADD_SUBDIRECTORY(sgemm)
ADD_SUBDIRECTORY(dgemm)
ADD_SUBDIRECTORY(sgemv)
ADD_SUBDIRECTORY(sger)
ADD_SUBDIRECTORY(sscal)

SET(BLASSRC ${CGEMMSRC} ${DASUMSRC} ${DCOPYSRC} ${DDOTSRC} ${DSCALSRC} ${SASUMSRC} ${SAXPYSRC}
            ${SCOPYSRC} ${SDOTSRC} ${SGEMMSRC} ${SGEMVSRC} ${SGERSRC} ${SSCALSRC} ${DGEMMSRC} PARENT_SCOPE)

