ADD_SUBDIRECTORY(cgemm)
ADD_SUBDIRECTORY(zgemm)
ADD_SUBDIRECTORY(dasum)
ADD_SUBDIRECTORY(dcopy)
ADD_SUBDIRECTORY(ddot)
ADD_SUBDIRECTORY(dscal)
ADD_SUBDIRECTORY(sasum)
ADD_SUBDIRECTORY(saxpy)
ADD_SUBDIRECTORY(daxpy)
ADD_SUBDIRECTORY(scopy)
ADD_SUBDIRECTORY(sdot)
ADD_SUBDIRECTORY(sgemm)
ADD_SUBDIRECTORY(dgemm)
IF ( ${HGEMM_ENABLE} MATCHES "ON" )
   ADD_SUBDIRECTORY(hgemm)
ENDIF()
ADD_SUBDIRECTORY(sgemv)
ADD_SUBDIRECTORY(dgemv)
ADD_SUBDIRECTORY(sger)
ADD_SUBDIRECTORY(dger)
ADD_SUBDIRECTORY(sscal)

IF ( ${HGEMM_ENABLE} MATCHES "ON" )
SET(BLASSRC ${HGEMMSRC} ${CGEMMSRC} ${ZGEMMSRC} ${DASUMSRC} ${DCOPYSRC} ${DDOTSRC} ${DSCALSRC} ${SASUMSRC} ${SAXPYSRC} ${DAXPYSRC}
            ${SCOPYSRC} ${SDOTSRC} ${SGEMMSRC} ${SGEMVSRC} ${SGERSRC} ${SSCALSRC} ${DGEMMSRC} ${DGEMVSRC} ${DGERSRC} PARENT_SCOPE)
ELSE()
SET(BLASSRC ${CGEMMSRC} ${ZGEMMSRC} ${DASUMSRC} ${DCOPYSRC} ${DDOTSRC} ${DSCALSRC} ${SASUMSRC} ${SAXPYSRC} ${DAXPYSRC}
            ${SCOPYSRC} ${SDOTSRC} ${SGEMMSRC} ${SGEMVSRC} ${SGERSRC} ${SSCALSRC} ${DGEMMSRC} ${DGEMVSRC} ${DGERSRC} PARENT_SCOPE)
ENDIF()
