cmake_minimum_required(VERSION 2.8)

#add_subdirectory(hcblas_sgemm)
#add_subdirectory(hcblas_cgemm)
add_subdirectory(hcblas_sgemv)
add_subdirectory(hcblas_sger)
add_subdirectory(hcblas_saxpy)
add_subdirectory(hcblas_sscal)
add_subdirectory(hcblas_dscal)
add_subdirectory(hcblas_scopy)
add_subdirectory(hcblas_dcopy)
add_subdirectory(hcblas_sasum)
add_subdirectory(hcblas_dasum)
add_subdirectory(hcblas_sdot)
add_subdirectory(hcblas_ddot)
